# trial4

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Glekcraft.sln  NativeRuntime.props  NativeRuntime.targets  Natives.props  README.md
.github/: dependabot.yml
.github/workflows/: cmake.yml  codeql.yml  dotnet.yml  lint.yml
GLFW/: Glekcraft.GLFW.csproj  packages.lock.json
GLFW/runtime/osx-x64/: libglfw.dylib
GLFW/src/: DefaultNativeAPIs.cs  GLFWException.cs  LibGLFW.cs  NativeAPIs.cs
Glekcraft/: Glekcraft.csproj  packages.lock.json
Glekcraft/src/: Config.cs  Game.cs  Program.cs
Glekcraft/src/Config/: GraphicsConfig.cs  RootConfig.cs  WindowConfig.cs
Glekcraft/src/Graphics/Primitives/: GLBuffer.cs  GLCreateFailedException.cs  GLException.cs  GLObject.cs  GLObjectType.cs  GLShader.cs  GLShaderProgram.cs  GLTexture.cs
Glekcraft/src/Graphics/Primitives/Exceptions/: GLObjectCreationFailedException.cs  GLOperationException.cs  GLShaderCompilationFailedException.cs  GLShaderProgramLinkingFailedException.cs
Glekcraft/src/OpenGL/: Buffer.cs  GLException.cs  Shader.cs  ShaderProgram.cs
Logging/: Glekcraft.Logging.csproj
include/: disposable.hpp  game.hpp  glBuffer.hpp  glShader.hpp  glShaderProgram.hpp
src/: game.cpp  glBuffer.cpp  glShader.cpp  glShaderProgram.cpp  main.cpp
tests/GLFW/: Glekcraft.GLFW.Tests.csproj  packages.lock.json
tests/GLFW/src/: LibGLFWTests.cs  NativeAPITests.cs
tests/GLFW/src/Mocks/: MockNativeAPI.cs  NativeAPI.cs
